--- a/.htaccess
+++ b/.htaccess
@@ -6,11 +6,11 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
-RewriteBase /wordpress-essai/
+RewriteBase /wordpress-zoomers/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /wordpress-essai/index.php [L]
+RewriteRule . /wordpress-zoomers/index.php [L]
 </IfModule>
 
 # END WordPress
