--- a/wp-content/themes/themedebase/wpm-config.json
+++ b/wp-content/themes/themedebase/wpm-config.json
@@ -3,6 +3,9 @@
     "produit": {},
     "nouvelle": {},
     "membres": {},
-    "temoignage": {}
+    "temoignage": {},
+    "element_accueil": {},
+    "titre_secondaire": {},
+    "titre_secondaire2": {}
   }
 }
