--- a/wp-content/themes/themedebase/wpm-config.json
+++ b/wp-content/themes/themedebase/wpm-config.json
@@ -6,6 +6,8 @@
     "temoignage": {},
     "element_accueil": {},
     "titre_secondaire": {},
-    "titre_secondaire2": {}
+    "titre_secondaire2": {},
+    "console_produit": {},
+    "apple_produit": {}
   }
 }
