--- a/wp-content/themes/themedebase/wpm-config.json
+++ b/wp-content/themes/themedebase/wpm-config.json
@@ -8,6 +8,7 @@
     "titre_secondaire": {},
     "titre_secondaire2": {},
     "console_produit": {},
-    "apple_produit": {}
+    "apple_produit": {},
+    "apropos_element": {}
   }
 }
